# python-now

./: .gitignore  Contributing.md  LICENSE  README.md  brython.html  index.html  pyproject.toml  realPython.py  start.py  style.css  worker.py
lessons/: 00-how-to-use.md  01-strings-numbers.md  01-strings.md  variables-and-lists.md
