[tool.poetry]
name = "startpython"
version = "0.1.0"
description = ""
authors = [
    "vanessa <32312712+vlbee@users.noreply.github.com>",
    "Daniel Pope <mauve@mauveweb.co.uk>",
]

[tool.poetry.dependencies]
python = "^3.7"
livereload = "^2.6.1"
brython = "^3.8.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
