[tool.poetry]
name = "startpython"
version = "0.1.0"
description = ""
authors = [
    "vanessa <32312712+vlbee@users.noreply.github.com>",
    "Daniel Pope <mauve@mauveweb.co.uk>",
]

[tool.poetry.dependencies]
python = "^3.7"
livereload = "^2.6.1"
brython = "^3.8.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
flake8-docstrings = "^1.5.0"
pep8-naming = "^0.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
